# cc_assistant

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: pages.yml  release.yml
docs/: 20260326_CC_Assistant_设计文档.md  PROGRESS.md
landing/: index.html
scripts/: release.js
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app_config.rs  env_vars.rs  history.rs  hooks.rs  marketplace.rs  memory.rs  mod.rs  plugins.rs  profiles.rs  project_settings.rs  projects.rs  prompt.rs  settings.rs  skills.rs  usage.rs
src/components/dashboard/: ActiveSessionsPanel.tsx  Dashboard.tsx  HiddenProjectsModal.tsx  ProjectCard.tsx
src/components/hooks/: HooksPage.tsx
src/components/layout/: MainLayout.tsx  Sidebar.tsx
src/components/memory/: MemoryPage.tsx
src/components/model/: ModelPage.tsx
src/components/permission/: PermissionPage.tsx
src/components/plugins/: PluginsPage.tsx
src/components/preferences/: PreferencesPage.tsx
src/components/profiles/: ProfilesPage.tsx
src/components/prompt/: PromptPage.tsx
src/components/sessions/: ConversationDetail.tsx  SessionsPage.tsx
src/components/settings/: SettingsPage.tsx
src/components/skills/: SkillsPage.tsx
src/components/ui/: LoadingSkeleton.tsx  SaveStatusBadge.tsx
src/components/usage/: UsagePage.tsx
src/lib/: tauri-api.ts  types.ts  utils.ts
src/stores/: app-store.ts
tests/: test-permissions.mjs
