[package]
name = "cc-assistant"
version = "0.2.0"
description = "Claude Code 管理面板"
authors = ["leili"]
edition = "2021"

[lib]
name = "cc_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
sysinfo = "0.33"

[features]
custom-protocol = ["tauri/custom-protocol"]
